--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /public/hot
 /public/storage
 /storage/*.key
+/public/js/app.js
+/public/css/app.css
+
 /vendor
 .env
 .env.backup
@@ -11,3 +14,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+*.js
