Implementing simple registration
I've added the Simple registration that we need for auth

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "tiptap": "^1.32.1",
         "tiptap-extensions": "^1.35.1",
-        "vue-router": "^3.5.1"
+        "vue-router": "^3.5.1",
+        "vuex": "^3.6.2"
     }
 }
