--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "tiptap": "^1.32.1",
-        "tiptap-extensions": "^1.35.1",
+        "@ckeditor/ckeditor5-build-classic": "^26.0.0",
+        "@ckeditor/ckeditor5-vue2": "^1.0.5",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2"
     }
